# PythonCodeHub

./: .gitignore  GIT.md  README.md  adv_python_env.yml  pyproject.toml  requirements.txt  setup.sh
CodePuzzles/: README.md
CodePuzzles/Scripts/: addition_of_reversed_list.py  find_list_indices_that_sums_up.py  longest_string_without_repeating_chars.py  roman_to_integer.py  test.py  zigzag_fixed_string_style.py
Containerization[Docker]/: Intro.md  README.md
Containerization[Docker]/Multi_Stage_Single_Container_Deployment/: README.md  dockerfile
Containerization[Docker]/Single_Container_Deployment/: README.md  app.py  dockerfile  ext_app.py
EDA/: README.md
EDA/Data/: Play_Tennis.csv
EDA/Scripts/: Data_Analysis.html  Data_Analysis.ipynb
FlaskApps/: README.md  swagger.yml  test.txt
FlaskApps/Scripts/: EDA_Viz.py  EDA_Viz[Seaborn].py  Play_Tennis.py  Real_SVG_KPI_Creation.ipynb  Seaborn_EDA_Viz.py
FlaskApps/Scripts/templates/: index.html  plot.html  plot[d3js].html  plot[seaborn].html
Generic/: config.ini  config.yml
Generic/Scripts/: Exception_Handling[Context_Manager].py
Logging/: READme.md  a.py  main.py
Module/: Car.py  README.md
Module/engine/: __init__.py  engine.py  pyproject.toml
Modules/: pyproject.toml
Modules/Scripts/: Config[.ini__yml]_Reader.py  Pandas_Polars[Arrow_Data_Format].ipynb
Standards/: Ellipsis.py  Shortcuts.py
VirtualEnv & Package Manager/: README.md  Test.ipynb  pyproject.toml
tests/: README.md
tests/integration/: test_db.py
tests/unit/: test_module.py
