[tool.poetry]
name = "test-poetry-dependency-example"
version = "0.1.0"
description = "Poetry Example"
authors = ["Rakesh"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ipython = "^8.29.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
